todo/k8s/backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-api
spec:

  selector:
    matchLabels:
      app: todo-api
  replicas: 1
  template:
    metadata:
      labels:
        app: todo-api
    spec:
      containers:
        - name: todo-api
          image: hub.comcast.net/sandbox/todo-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /api/todos
              port: 8080
          readinessProbe:
            httpGet:
              path: /api/todos
              port: 8080
