todo/k8s/frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-frontend
spec:

  selector:
    matchLabels:
      app: todo-frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: todo-frontend
    spec:
      containers:
        - name: todo-frontend
#          image: todo-frontend:v1.0.0
          image: frontend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
