todo/k8s/mysql-exporter-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-exporter
  labels:
    app: mysql
spec:
  selector:
    app: mysql
  ports:
    - name: metrics
      port: 9104
      targetPort: 9104
      protocol: TCP
  type: ClusterIP
